# Hackathon-0

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dashboard.md  LICENSE  Makefile  PHASE4_COMPLETION_REPORT.md  README.md  conftest.py  production_readiness_log.md  pyproject.toml  pytest.ini
.git-rewrite/: backup-refs  commit  heads  message  parse  revs
Approved/: partner-campaign-summary-email.md
Logs/: 2026-02-28.json
Pending_Approval/: campaign-budget-breakdown.md  social-media-posts-ai-robot-book.md
agents/: __init__.py  audit_logger.py  complexity_detector.py  constants.py  dashboard_writer.py  exceptions.py  frontmatter.py  hitl_gate.py  inbox_scanner.py  logging_config.py  plan_manager.py  plan_parser.py  protocols.py  reconciler.py  silver-reasoning-agent.md  task_templates.py  utils.py  validators.py  vault_context.py  vault_init.py  vault_router.py
docs/: api-reference.md  architecture.md  deployment.md  development.md  glossary.md  gold-tier-architecture.md  roadmap.md  security.md  silver-reasoning-quickstart.md  silver-reasoning-troubleshooting.md  testing-guide.md  vault-guide.md
references/: approval-request-template.md  dashboard-template.md  plan-template.md  reasoning-log-template.md
sentinel/: .env.example  .gitignore  pyproject.toml
sentinel/src/sentinel/: __init__.py  __main__.py  base.py  cli.py  config.py  events.py  filesystem.py  health.py  logging_config.py  sidecar.py
sentinel/tests/: conftest.py  test_base_watcher.py  test_config.py  test_filesystem.py  test_ignore.py  test_sidecar.py
sentinel/tests/fixtures/: mock_watcher.py
specs/: README.md
test_commits/: platinum_feature_1.md  platinum_feature_10.md  platinum_feature_11.md  platinum_feature_12.md  platinum_feature_13.md  platinum_feature_14.md  platinum_feature_15.md  platinum_feature_16.md  platinum_feature_17.md  platinum_feature_18.md  platinum_feature_19.md  platinum_feature_2.md  platinum_feature_20.md  platinum_feature_21.md  platinum_feature_22.md  platinum_feature_23.md  platinum_feature_24.md  platinum_feature_25.md  platinum_feature_26.md  platinum_feature_27.md  platinum_feature_28.md  platinum_feature_29.md  platinum_feature_3.md  platinum_feature_30.md  platinum_feature_31.md  platinum_feature_32.md  platinum_feature_33.md  platinum_feature_34.md  platinum_feature_35.md  (+21 more)
(+231 files in other folders)
