[project]
name = "personal-ai-employee"
version = "0.2.0"
description = "Obsidian Vault-based AI Employee with Bronze-Silver tiered architecture"
requires-python = ">=3.11"
authors = [
    { name = "muhammadhamza718" },
]
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "sentinel/src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
