[project]
name = "personal-ai-employee"
version = "0.3.0"
description = "Obsidian Vault-based AI Employee with Bronze-Silver tiered architecture"
requires-python = ">=3.11"
authors = [
    { name = "muhammadhamza718" },
]
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "sentinel/src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "sentinel"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.coverage.run]
source = ["agents", "sentinel"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]
